<resources>
    <string name="app_name">Cano Maria Ayelen</string>
    <string name="user">Usuario</string>
    <string name="pass">Constraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="Registrar">O Registrar</string>
    <string name="mulan">Mulan</string>
    <string name="dragon_ball">Dragon Ball</string>
    <string name="rey_leon">El Rey Leon</string>
    <string name="sailor_moon">Sailor Moon</string>
    <string name="cab_zodiaco">Caballeros del Zodiaco</string>
    <string name="toy_story">Toy Story</string>
    <string name="registrate">Registrate</string>
    <string name="Nombre">Nombre</string>
    <string name="NombreApellido">Nombre y Apellido</string>
    <string name="email">Email</string>
    <string name="passRepeat">Repetir Contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="title_activity_help">Help</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar_correo">Enviar Correo</string>
    <string name="Enviar">Enviar</string>
</resources>