<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorSemiTrasparent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/registrate"
            android:textSize="36sp"
            android:textColor="@color/negro"
            android:background="@color/dorado"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/NombreApellido" />
        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user"
            android:autofillHints="" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/contraseñaI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/contraseñaII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/passRepeat"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_style"
            android:textSize="20sp"
            android:text="@string/iniciar_sesion" />
    </LinearLayout>
</RelativeLayout>