<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_loging"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        tools:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:background="@drawable/layout_style"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="00dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:hint="@string/pass"
        android:background="@drawable/layout_style"
        android:ems="10"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="10dp"
        android:layout_weight="9"
        android:background="@drawable/button_style"
        android:textSize="20dp"
        android:text="@string/iniciar_sesion" />
    <TextView
        android:id="@+id/textRegistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/Registrar"
        android:textSize="20dp"
       android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:background="@color/Trasparent"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/facebook" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/Trasparent"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/google" />
    </LinearLayout>

</LinearLayout>